# AutoSimulateGui

./: .gitignore  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  LICENSE  main.cpp  main.qml  qml.qrc
UI_Design/: addevent_design.excalidraw  editor_design.excalidraw
res/UI_Design/: addevent_design.excalidraw  screenshot_design.excalidraw
src/cpp/header/: FileController.h  FileManager.h  ImageProcessor.h  abstract_editor_model.h  document_handler.h  document_model.h  editor_controller.h  editor_model.h  file_handler.h  main_controller.h  menu_controller.h  menu_model.h  navigation_controller.h  navigation_model.h  qml_editor_model.h  window_controller.h  window_manager.h
src/cpp/src/: FileController.cpp  FileManager.cpp  ImageProcessor.cpp  abstract_editor_model.cpp  document_handler.cpp  document_model.cpp  editor_controller.cpp  editor_model.cpp  file_handler.cpp  main.cpp  main_controller.cpp  menu_controller.cpp  menu_model.cpp  navigation_controller.cpp  navigation_model.cpp  qml_editor_model.cpp
src/qml/: App.qml  CusDragRect.qml  add_event.qml  editor.qml  editor.qml.sBZBTo  event_edit.qml  main.qml  screenshot.qml
src/styles/: LightTheme.qml  qmldir
src/views/: App.qml  add_event.qml  code_editor.qml  dragRect.qml  editor.qml  event_edit.qml  event_editor.qml  help.qml  main.qml  screenshot.qml  test_drag.qml
